2.ordersystem/k8s/depl_svc.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: ordersystem-deployment
  namespace: jinho
spec:
# 몇대의 Pod를 띄울거냐
  replicas: 1
  selector:
  # 아래의 (match)labels은 replicaSet이 관리해야 할 pod를 결정하는데 사용
    matchLabels:
      app: jinho-ordersystem
  template: 
    metadata:
    # 서비스가 바라보기 위한 label
      labels:
        app: jinho-ordersystem
    spec:
      containers:
      - name: my-ordersystem
        image: 346903264902.dkr.ecr.ap-northeast-2.amazonaws.com/jinho/ordersystem
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            # healthcheck 경로
            path: /health
            port: 8080
          # 컨테이너 시작 후 지연
          initialDelaySeconds: 10
          # 확인 반복 주기
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata: 
  name: ordersystem-service
  namespace: jinho
spec: 
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: jinho-ordersystem
